// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paper renders without crashing, matches snapshot 1`] = `
<div>
  <div
    id="PickUpUI"
  >
    <div
      class="PU-46859-root-0-2-1 PU-46859-root-d0-0-2-3"
      data-testid="paper"
    >
      Hello, World
    </div>
  </div>
</div>
`;

exports[`Paper with logo heading renders without crashing, matches snapshot 1`] = `
<div>
  <div
    id="PickUpUI"
  >
    <div
      class="PU-23693-root-0-2-1 PU-23693-root-d0-0-2-3"
      data-testid="paper"
    >
      <div
        class="PU-23693-logoHeading-0-2-2"
      >
        <div>
          <img
            alt="PickUp"
            role="presentation"
            src="test-file-stub"
          />
        </div>
      </div>
      Hello, World
    </div>
  </div>
</div>
`;
